Filter best poems

--- a/markdown-lab/poemas/_ (1).md
+++ b/markdown-lab/poemas/_ (1).md
@@ -1,19 +1,31 @@
 ---
-slug: "/poemas/me-calmo"
-title: "me-calmo"
+slug: "/poemas/tus-lentes"
+title: "tus-lentes"
 ---
-Me calmo, sin que noten los relámpagos.
+Tus lentes.
 
 &nbsp;
 
-Sonrío, sin que noten mi felicidad;
+Delgados puentes de aluminio,
 
-resisto, sin que noten mi durabilidad.
+redonda red de cristal,
+
+tersa piel en la que se ha de posar
+
+el frío reflejo 
+
+de paneles de sal.
 
 &nbsp;
 
-Noten, que mis acciones
+En vaivén, a través 
 
-no responden a mis emociones,
+del arco de dorado floral
 
-sino, a mi voluntad.
+sobre grandes cuencas,
+
+capturadoras negro abisal
+
+captan mi asomo 
+
+al ánima que avisto.
