--- a/markdown-lab/poemas/_ (10).md
+++ b/markdown-lab/poemas/_ (10).md
@@ -1,11 +1,25 @@
 ---
-slug: "/poemas/hace-unos-annos"
-title: "hace-unos-años"
+slug: "/poemas/hijas-de-eva"
+title: "hijas-de-eva"
 ---
-Hace unos años,
+Hijas de Eva
 
-brazos me sostenían
+libres del amor propio,
 
-mientras lloraba el alma
+hundiéndose en el mar.
 
-sin entender por qué.
+&nbsp;
+
+Hienas marinas acechan,
+
+ocultando su collar 
+
+de dientes de sirenas.
+
+&nbsp;
+
+Hienas satisfechas,
+
+se marchan
+
+a cepillar sus fauces.
