--- a/markdown-lab/poemas/_ (11).md
+++ b/markdown-lab/poemas/_ (11).md
@@ -1,11 +1,61 @@
 ---
-slug: "/poemas/sensacion-de-asfixia"
-title: "sensación-de-asfixia"
+slug: "/poemas/vengo-de-mi-institucion"
+title: "vengo-de-mi-institución"
 ---
-Sensación de asfixia
+Vengo de mi institución,
 
-que no se detiene,
+donde el material
 
-aún cuando mis manos
+de mi estandarte
 
-acarician al cuello que lastiman.
+no tiene tonos
+
+de supremacía,
+
+donde nadie
+
+es mejor que nadie,
+
+donde todos
+
+empiezan como alguien,
+
+esconderse es un derecho,
+
+nombrarse es un delito,
+
+la vitalidad es una página
+
+en el capítulo de los mitos.
+
+&nbsp;
+
+Mis acompañantes
+
+son un ajedrez mesoamericano,
+
+son llaveros de sus deudas,
+
+porta-vinos, bisuteras,
+
+escudos de joyería, secretarios,
+
+réplicas indígenas,
+
+partes del proletariado;
+
+no sangre azul
+
+no tez rosada,
+
+sino sangre roja,
+
+sino piel quemada.
+
+&nbsp;
+
+Les llaman títeres,
+
+cuando realmente son
+
+titiriteros.
