--- a/markdown-lab/poemas/_ (12).md
+++ b/markdown-lab/poemas/_ (12).md
@@ -1,19 +1,49 @@
 ---
-slug: "/poemas/si-trato-de-levitar"
-title: "si-trato-de-levitar"
+slug: "/poemas/sos-el-balso"
+title: "sos-el-balso"
 ---
-Si trato de levitar
+Sos el balso,
 
-un objeto hasta mis pies,
+que después
 
-me desconcentro,
+de salir del pozo
 
-me desanimo
+frunce el ceño
 
-y tomo con mis manos
+luego de cada siesta.
 
-sentimientos de involucionado,
+&nbsp;
 
-que cree que la fuerza 
+Eras Ochroma
 
-está consigo.
+que subía lastimada
+
+por la negatividad
+
+hacia la sombra
+
+de la luz.
+
+&nbsp;
+
+Serás el alto
+
+y delgado árbol
+
+que se robustece
+
+al ser escalado
+
+por sus hermanos.
+
+&nbsp;
+
+Sos, eras y serás
+
+mi núcleo paciente
+
+de los secretos
+
+y su oquedad
+
+del fondo de mi mente.
