--- a/markdown-lab/poemas/_ (13).md
+++ b/markdown-lab/poemas/_ (13).md
@@ -1,15 +1,23 @@
 ---
-slug: "/poemas/un-hombre-sabio-de-verdad"
-title: "un-hombre-sabio-de-verdad"
+slug: "/poemas/somos-inocentes-pero-culpables"
+title: "somos-inocentes-pero-culpables"
 ---
-Un hombre sabio de verdad
+Somos inocentes pero culpables
 
-no rechaza la vida
+de la inocencia ante los tuertos.
 
-sino puede extasiarla;
+&nbsp;
 
-un delito el renunciar;
+Su labrys justicia será blandida
 
-es de cobardes
+para dejarnos tuertos y a ellos ciegos,
 
-cederle el paso a los indignos.
+mientras les estrangula el peso
+
+de la sangre de sus heridas.
+
+&nbsp;
+
+Así, nosotros tomamos su labrys
+
+con la percepción disminuida.
