--- a/markdown-lab/poemas/_ (14).md
+++ b/markdown-lab/poemas/_ (14).md
@@ -1,21 +1,73 @@
 ---
-slug: "/poemas/somos-lo-que-hacemos"
-title: "somos-lo-que-hacemos"
+slug: "/poemas/tus-gemidos-son-acordes"
+title: "tus-gemidos-son-acordes"
 ---
-Somos lo que hacemos, repetidamente.
+Tus gemidos son acordes 
+
+que armonizan 
+
+en el himno 
+
+de nuestro vaivén.
 
 &nbsp;
 
-Somos lo que hacemos, repetidamente.
+No eres fea, 
+
+sino fea, 
+
+tu ausencia.
 
 &nbsp;
 
-Somos lo que hacemos, repetidamente.
+Dulce esencia, 
+
+muerdo tu clamor.
 
 &nbsp;
 
-Somos lo que hacemos, repetidamente.
+No me presento
+
+porque te ves
+
+linda e/o hipnótica,
+
+sino, que te presiento
+
+como un céfiro
+
+cada que analizas
+
+estos, mis gestos.
 
 &nbsp;
 
-Somos lo que hacemos, repetidamente.
+Me desespero, 
+
+pero no pares.
+
+&nbsp;
+
+No eres fea,
+
+sino feo 
+
+no aprovecharme
+
+de envolver tus manos
+
+y empujarme
+
+y columpiarnos.
+
+&nbsp;
+
+Besarte el alma,
+
+me resulta insoportable
+
+pero no porque eres fea,
+
+sino, que no puedo quedarme
+
+y que te desmayes en mi pecho.
