--- a/markdown-lab/poemas/_ (2).md
+++ b/markdown-lab/poemas/_ (2).md
@@ -1,11 +1,49 @@
 ---
-slug: "/poemas/ven-a-un-humano-embotellado"
-title: "ven-a-un-humano-embotellado"
+slug: "/poemas/se-me-hace-reconfortante-estar-contigo"
+title: "se-me-hace-reconfortante-estar-contigo"
 ---
-Ven a un humano embotellado
+Se me hace reconfortante estar contigo,
 
-que se apena de su fragilidad,
+ver y besar desde el dorso de tus manos
 
-pero, no se rompe porque
+que te avisa en la psique los espasmos
 
-¿cómo se rompe el vacío?
+para luego sumergirme y pintar hipnotizado
+
+hasta las fosas en los relieves de tu cuerpo.
+
+&nbsp;
+
+Me vuelves tan loco que estoy tranquilo,
+
+tus dedos sumergidos tocan los míos,
+
+invitándolos a adentrarse.
+
+ 
+
+Solo te aviso,
+
+mi locura contigo es plural,
+
+si seguimos, 
+
+nuestra insania se elevará
+
+a la equivalencia 
+
+de nuestro parecido.
+
+&nbsp;
+
+Mientras captas mi asomo 
+
+al ánima que averiguo,
+
+siempre descubres el mecanismo
+
+que no puedo más que revelar.
+
+&nbsp;
+
+Sinceramente, somos dioses que se miran.
