--- a/markdown-lab/poemas/_ (3).md
+++ b/markdown-lab/poemas/_ (3).md
@@ -1,9 +1,27 @@
 ---
-slug: "/poemas/aunque-en-calma"
-title: "aunque-en-calma"
+slug: "/poemas/lagrimas-de-rabia"
+title: "lágrimas-de-rabia"
 ---
-Aunque en calma,
+Lágrimas de rabia,
 
-no me quito los guantes
+engoman mis dientes.
 
-para quererte al aire.
+&nbsp;
+
+Veo, buscan en mí, 
+
+excitación.
+
+&nbsp;
+
+¿Quieren que exprima
+
+mis sentimientos en un cáliz?
+
+&nbsp;
+
+Beban riadas.
+
+&nbsp;
+
+Aquí vienen.
