--- a/markdown-lab/poemas/_ (4).md
+++ b/markdown-lab/poemas/_ (4).md
@@ -1,17 +1,11 @@
 ---
-slug: "/poemas/trato-de-concentrarme"
-title: "trato-de-concentrarme"
+slug: "/poemas/les-toca-o-aceptar-su-blancuzco"
+title: "les-toca-o-aceptar-su-blancuzco"
 ---
-Trato de concentrarme,
+Les toca o aceptar su blancuzco,
 
-en serio, pero tu espalda
+o pintar su cuerpo, o pedir exilio
 
-se filtra en mi memoria,
+para que coloridas de juventud eterna,
 
-qué irrisorio recuerdo.
-
-&nbsp;
-
-Acariciándote en las fronteras
-
-y en la suma de nuestro morbo.
+floten hasta el basurero.
