--- a/markdown-lab/poemas/_ (5).md
+++ b/markdown-lab/poemas/_ (5).md
@@ -1,13 +1,17 @@
 ---
-slug: "/poemas/me-besan-dos-versiones-de-ti"
-title: "me-besan-dos-versiones-de-ti"
+slug: "/poemas/gigante-al-tramo"
+title: "gigante-al-tramo"
 ---
-Me besan dos versiones de ti:
+Gigante al tramo
 
-una, con saliva,
+de un curso fluvial,
 
-trazando su néctar,
+abetos gritando,
 
-la otra, con ácido,
+madereros genocidas
 
-creando ríos carmín.
+que transmutan
+
+al gigante al tramo
+
+en un curso de papel.
