--- a/markdown-lab/poemas/_ (7).md
+++ b/markdown-lab/poemas/_ (7).md
@@ -1,49 +1,35 @@
 ---
-slug: "/poemas/se-me-hace-reconfortante-estar-contigo"
-title: "se-me-hace-reconfortante-estar-contigo"
+slug: "/poemas/el-maestro-es-sabio"
+title: "el-maestro-es-sabio"
 ---
-Se me hace reconfortante estar contigo,
+El maestro es sabio,
 
-ver y besar desde el dorso de tus manos
+pero un chubasco,
 
-que te avisa en la psique los espasmos
-
-para luego sumergirme y pintar hipnotizado
-
-hasta las fosas en los relieves de tu cuerpo.
+fuerte, bendito y donador.
 
 &nbsp;
 
-Me vuelves tan loco que estoy tranquilo,
+Todo un conejo en llanura
 
-tus dedos sumergidos tocan los míos,
-
-invitándolos a adentrarse.
-
- 
-
-Solo te aviso,
-
-mi locura contigo es plural,
-
-si seguimos, 
-
-nuestra insania se elevará
-
-a la equivalencia 
-
-de nuestro parecido.
+con resistencia de tortuga.
 
 &nbsp;
 
-Mientras captas mi asomo 
+Por eso, esta imagen idílica
 
-al ánima que averiguo,
+insta mi cuerpo a responder,
 
-siempre descubres el mecanismo
+entrenar mis articulaciones
 
-que no puedo más que revelar.
+hasta convertirlas
 
-&nbsp;
+en quebradizas ramas secas,
 
-Sinceramente, somos dioses que se miran.
+luz de parto al faro,
+
+de una mente despierta
+
+que de toda noche atento,
+
+se apaga al amanecer.
