--- a/markdown-lab/poemas/_ (8).md
+++ b/markdown-lab/poemas/_ (8).md
@@ -1,11 +1,15 @@
 ---
-slug: "/poemas/entre-personas-azules-y-rojas"
-title: "entre-personas-azules-y-rojas"
+slug: "/poemas/y-por-que-no-camina?"
+title: "¿y-por-qué-no-camina?"
 ---
-Entre personas azules y rojas,
+¿Y por qué no camina?
 
-me siento morada,
+&nbsp;
 
-pero también,
+Porque es taquígrafo y ladrón,
 
-me siento en casa.
+máquina analítica con piernas,
+
+finge fallecer en el asiento
+
+para robar ideas del rededor.
