--- a/markdown-lab/poemas/_ (6).md
+++ b/markdown-lab/poemas/_ (6).md
@@ -1,31 +1,73 @@
 ---
-slug: "/poemas/ver-tus-lentes"
-title: "ver-tus-lentes"
+slug: "/poemas/consuelo-visito-al-muchacho"
+title: "consuelo-visitó-al-muchacho"
 ---
-Ver tus lentes.
+Consuelo visitó al muchacho
+
+llevándolo hacia mundos paralelos.
 
 &nbsp;
 
-Delgados puentes de aluminio,
+Su voz y presencia
 
-redonda red de cristal,
+desatan la dualidad de condición,
 
-tersa piel en la que se ha de posar
+estar en completo silencio,
 
-el frío reflejo 
-
-de paneles de sal.
+entre una atronadora guerra.
 
 &nbsp;
 
-En vaivén, a través 
+Con la promesa implícita pendiente,
 
-del arco de dorado floral
+del que se llegaría a acabar
 
-sobre grandes cuencas,
+o su sufrir o su vitalidad,
 
-capturadoras negro abisal
+el niño estirándose a la fuerza
 
-captan mi asomo 
+tomó los filos negros
 
-al ánima que avisto.
+que perforaban 
+
+los poros de su espalda,
+
+con su hermana atestiguando,
+
+hizo que le atravesaran hasta el alma
+
+y danzaran por su casa,
+
+abriendo sus ventanas
+
+hasta que el huracán pasara.
+
+&nbsp;
+
+Su tranquilidad se legitimó
+
+frente a la mayor prueba
+
+que instaba el lanzarse al agua
+
+y respirar profundo,
+
+un loco seguro y sin tratamiento, 
+
+regresó de la sesión
+
+de su loquero interno.
+
+&nbsp;
+
+Un horno en el cuerpo
+
+se expande y se ve al espejo,
+
+y asombrado por sobrevivir,
+
+se tira un beso y dice:
+
+"Gracias, sos mi orgullo,
+
+te amo y te disfruto".
