Add emotion to poems

--- a/markdown-lab/poemas/_ (0).md
+++ b/markdown-lab/poemas/_ (0).md
@@ -1,5 +1,6 @@
 ---
 slug: "/poemas/corriendo-a-toda-velocidad"
+tags: ["sad"]
 title: "corriendo-a-toda-velocidad"
 ---
 Corriendo a toda velocidad
