--- a/markdown-lab/poemas/_ (13).md
+++ b/markdown-lab/poemas/_ (13).md
@@ -1,5 +1,6 @@
 ---
 slug: "/poemas/somos-inocentes-pero-culpables"
+tags: ["normal"]
 title: "somos-inocentes-pero-culpables"
 ---
 Somos inocentes pero culpables
