--- a/markdown-lab/poemas/_ (2).md
+++ b/markdown-lab/poemas/_ (2).md
@@ -1,5 +1,6 @@
 ---
 slug: "/poemas/se-me-hace-reconfortante-estar-contigo"
+tags: ["love"]
 title: "se-me-hace-reconfortante-estar-contigo"
 ---
 Se me hace reconfortante estar contigo,
