--- a/markdown-lab/poemas/_ (4).md
+++ b/markdown-lab/poemas/_ (4).md
@@ -1,5 +1,6 @@
 ---
 slug: "/poemas/les-toca-o-aceptar-su-blancuzco"
+tags: ["normal"]
 title: "les-toca-o-aceptar-su-blancuzco"
 ---
 Les toca o aceptar su blancuzco,
