--- a/markdown-lab/poemas/_ (6).md
+++ b/markdown-lab/poemas/_ (6).md
@@ -1,5 +1,6 @@
 ---
 slug: "/poemas/consuelo-visito-al-muchacho"
+tags: ["happy"]
 title: "consuelo-visitó-al-muchacho"
 ---
 Consuelo visitó al muchacho
