--- a/markdown-lab/poemas/_ (15).md
+++ b/markdown-lab/poemas/_ (15).md
@@ -11,7 +11,9 @@ no porque lo finja, sino,
 
 porque cuando acepto el reto,
 
-solo saco la bestia, que tengo adentro.
+solo saco la bestia, 
+
+que tengo dentro.
 
 &nbsp;
 
@@ -21,19 +23,31 @@ voy directo al punto...
 
 &nbsp;
 
-Sé lo que se siente que te empujen por la espalda,
+Sé lo que se siente 
 
-que te lancen por el suelo, pateándote hasta el alma.
+que te empujen por la espalda,
+
+que te lancen por el suelo, 
+
+pateándote hasta el alma.
 
 &nbsp;
 
-Sé lo que siente, ser un energúmeno,
+Sé lo que siente, 
 
-tener alguien que te importe y defraudarle para siempre.
+ser un energúmeno,
+
+tener alguien que te importe 
+
+y defraudarle para siempre.
+
+&nbsp;
 
 Personas rezagadas en tik tok;
 
-los aventajados comerciando su conocimiento.
+los aventajados 
+
+comerciando su conocimiento.
 
 &nbsp;
 
@@ -45,19 +59,25 @@ Black Mirror inspirándose de chinos.
 
 Hoy, Facebook se cayó,
 
-destruyendo desde el fondo todo vuestro stock.
+destruyendo desde el fondo 
+
+todo vuestro stock.
 
 &nbsp;
 
 Era un católico ferviente,
 
-viendo al padre robarle a los creyentes,
+viendo al padre 
+
+robarle a los creyentes.
 
 &nbsp;
 
 Sé lo que se siente,
 
-amar tanto a tu padre y que borrachos lo dejen inconsciente.
+amar tanto a tu padre 
+
+y que borrachos lo dejen inconsciente.
 
 &nbsp;
 
@@ -79,13 +99,15 @@ fumador irreparable,
 
 las mantiene a todas
 
-con solo una pierna.
+con una solo pierna.
 
 &nbsp;
 
 Sé lo que se siente,
 
-ser un primer hijo entre adolescentes.
+ser primer hijo 
+
+entre adolescentes.
 
 &nbsp;
 
@@ -127,13 +149,21 @@ Sé lo siente ser virtuoso.
 
 Sé lo que se siente abandonarlo.
 
-Tengo tanto, tanto, tanto, tanto, tanto, tanto, tanto, tanto tiempo de soñar.
+&nbsp;
+
+Tengo tanto, tanto, tanto, 
+
+tanto, tanto, tanto, tanto, 
+
+tanto tiempo de soñar.
 
 &nbsp;
 
 No hay quien me detenga, 
 
-mis pensamientos se convierten en poemas.
+mis pensamientos 
+
+se convierten en poemas.
 
 &nbsp;
 
@@ -175,31 +205,41 @@ Quiero quedarme concentrado.
 
 &nbsp;
 
-Quiero quedarme en silencio creando.
+Quiero quedarme 
+
+en silencio creando.
 
 &nbsp;
 
-Ser un artista con cara secreta.
+Un artista conocido 
+
+con por rostro tus oídos.
 
 &nbsp;
 
-Pero ¿saben qué?
+Pero, ya me cansé 
+
+de estimularlos.
 
 &nbsp;
 
-Ya me cansé de estimularlos.
+Sé lo que se siente 
+
+que me manden a la mierda.
 
 &nbsp;
 
-Sé lo que se siente que me manden a la mierda.
+Sé lo que siente; 
+
+yo se los comparto.
 
 &nbsp;
 
-Sé lo que siente; yo se los comparto.
+Sé lo que siente. 
 
 &nbsp;
 
-Sé lo que siente. Váyanse a la mierda.
+Váyanse a la mierda.
 
 &nbsp;
 
