Enhance poem-rap

--- a/markdown-lab/poemas/_ (15).md
+++ b/markdown-lab/poemas/_ (15).md
@@ -45,9 +45,9 @@ y defraudarle para siempre.
 
 Personas rezagadas en tik tok;
 
-los aventajados 
+los aventajados comerciando 
 
-comerciando su conocimiento.
+su conocimiento.
 
 &nbsp;
 
