--- a/markdown-lab/poemas/_ (15).md
+++ b/markdown-lab/poemas/_ (15).md
@@ -1,19 +1,21 @@
 ---
-slug: "/poemas/normalmente"
+slug: "/poemas/normalmente-para-mi"
 tags: ["desperation"]
-title: "normalmente"
+title: "normalmente-para-mí"
 ---
-Normalmente, mi rap es chill,
+Normalmente para mí, 
 
-pero puedo ponerme violento,
+mi rap es chill.
+
+&nbsp;
+
+Puedo rapear con violencia,
 
 no porque lo finja, sino, 
 
-porque cuando acepto el reto,
+que si lo acepto,
 
-solo saco la bestia, 
-
-que tengo dentro.
+solo saco la bestia.
 
 &nbsp;
 
@@ -211,15 +213,13 @@ en silencio creando.
 
 &nbsp;
 
-Un artista conocido 
+Un artista conocido, 
 
-con por rostro tus oídos.
+mi rostro tus oídos.
 
 &nbsp;
 
-Pero, ya me cansé 
-
-de estimularlos.
+Ya me cansé de estimularlos.
 
 &nbsp;
 
@@ -229,17 +229,15 @@ que me manden a la mierda.
 
 &nbsp;
 
-Sé lo que siente; 
-
-yo se los comparto.
-
-&nbsp;
-
-Sé lo que siente. 
-
-&nbsp;
-
 Váyanse a la mierda.
+
+&nbsp;
+
+Yo se los comparto.
+
+&nbsp;
+
+Sé lo que siente.
 
 &nbsp;
 
@@ -247,4 +245,4 @@ Ya me cansé de estimularlos.
 
 &nbsp;
 
-Váyanse a la mierda.
+Bye.
