--- a/markdown-lab/poemas/_ (15).md
+++ b/markdown-lab/poemas/_ (15).md
@@ -233,16 +233,16 @@ Váyanse a la mierda.
 
 &nbsp;
 
-Yo se los comparto.
-
-&nbsp;
-
 Sé lo que siente.
 
 &nbsp;
 
-Ya me cansé de estimularlos.
+Yo se los comparto.
 
 &nbsp;
 
-Bye.
+Váyanse a la mierda.
+
+&nbsp;
+
+Ya me cansé de estimularlos.
