--- a/markdown-lab/poemas/_ (15).md
+++ b/markdown-lab/poemas/_ (15).md
@@ -1,14 +1,8 @@
 ---
-slug: "/poemas/normalmente-para-mi"
+slug: "/poemas/puedo-rapear-con-violencia"
 tags: ["desperation"]
-title: "normalmente-para-mí"
+title: "puedo-rapear-con-violencia"
 ---
-Normalmente para mí, 
-
-mi rap es chill.
-
-&nbsp;
-
 Puedo rapear con violencia,
 
 no porque lo finja, sino, 
@@ -16,6 +10,12 @@ no porque lo finja, sino,
 que si lo acepto,
 
 solo saco la bestia.
+
+&nbsp;
+
+Normalmente para mí, 
+
+mi rap es chill.
 
 &nbsp;
 
@@ -45,25 +45,15 @@ y defraudarle para siempre.
 
 &nbsp;
 
-Personas rezagadas en tik tok;
-
-los aventajados comerciando 
-
-su conocimiento.
+Personas rezagadas en tik tok.
 
 &nbsp;
-
-China copiando a Black Mirror;
 
 Black Mirror inspirándose de chinos.
 
 &nbsp;
 
-Hoy, Facebook se cayó,
-
-destruyendo desde el fondo 
-
-todo vuestro stock.
+Facebook se cayó.
 
 &nbsp;
 
@@ -77,27 +67,27 @@ robarle a los creyentes.
 
 Sé lo que se siente,
 
-amar tanto a tu padre 
+amar tanto a tu padre,
 
-y que borrachos lo dejen inconsciente.
+que borrachos lo dejen inconsciente.
 
 &nbsp;
 
 Sé lo que se siente,
 
-un abuelo refugiando,
+un abuelo refugiado;
 
-muchas hijas, media docena,
+muchas hijas, media docena;
 
-siendo un estudiado y un poeta,
+siendo un estudiado y un poeta;
 
-protegiendo a los niños de la guerra,
+protegiendo a los niños de la guerra;
 
 que los intereses del país
 
-no se alineen con sus reglas,
+no se alineen con sus reglas;
 
-fumador irreparable,
+fumador irreparable;
 
 las mantiene a todas
 
@@ -137,10 +127,6 @@ Sé lo que siente soledad.
 
 &nbsp;
 
-Sé lo que siente marginado.
-
-&nbsp;
-
 Sé lo que siente estar drogado.
 
 &nbsp;
@@ -161,15 +147,19 @@ tanto tiempo de soñar.
 
 &nbsp;
 
-No hay quien me detenga, 
-
-mis pensamientos 
-
-se convierten en poemas.
+No hay quien me detenga.
 
 &nbsp;
 
-Demonios, ya es muy tarde.
+Demonios, para ustedes
+
+ya es muy tarde.
+
+&nbsp;
+
+Mis pensamientos 
+
+se convierten en poemas.
 
 &nbsp;
 
@@ -191,10 +181,6 @@ en un curso de papel.
 
 &nbsp;
 
-Sé lo que siente.
-
-&nbsp;
-
 Sé lo que siente que no entiendan.
 
 &nbsp;
@@ -207,15 +193,15 @@ Quiero quedarme concentrado.
 
 &nbsp;
 
-Quiero quedarme 
+Quiero crear 
 
-en silencio creando.
+sumergido en silencio.
 
 &nbsp;
 
 Un artista conocido, 
 
-mi rostro tus oídos.
+mi rostro, tus oídos.
 
 &nbsp;
 
@@ -223,13 +209,9 @@ Ya me cansé de estimularlos.
 
 &nbsp;
 
-Sé lo que se siente 
+Sé lo que se siente,
 
-que me manden a la mierda.
-
-&nbsp;
-
-Váyanse a la mierda.
+me manden a la mierda.
 
 &nbsp;
 
@@ -246,3 +228,19 @@ Váyanse a la mierda.
 &nbsp;
 
 Ya me cansé de estimularlos.
+
+&nbsp;
+
+Tengo tanto, tanto, tanto, 
+
+tanto, tanto, tanto, tanto, 
+
+tanto tiempo de soñar.
+
+&nbsp;
+
+Mi boca son mis manos.
+
+&nbsp;
+
+Soy herrero de palabras.
