--- a/markdown-lab/poemas/_ (16).md
+++ b/markdown-lab/poemas/_ (16).md
@@ -1,64 +1,44 @@
 ---
-slug: "/poemas/butterfly-taylor"
+slug: "/poemas/fiel-mariposa"
 tags: ["sad"]
-title: "butterfly-taylor"
+title: "fiel-mariposa"
 ---
-Butterfly Taylor.
+Fiel mariposa.
 
 &nbsp;
 
 No tienes que elegir un bando
 
-porque ya tienes el tuyo.
+porque ya te tienes.
 
 &nbsp;
 
-Sé abuelo mariposa.
+Abuelo mariposa
+
+o mi fiel papá.
 
 &nbsp;
 
-Yo conozco a papá;
-
-un Taylor con su esposa.
-
-&nbsp;
-
-No tienes que elegir un bando.
+No tienes que elegir.
 
 &nbsp;
 
 Tienes tantos pistilos
 
-para tí.
+para tí,
 
-&nbsp;
-
-Pero no eres dueño 
+pero no eres dueño 
 
 de ni uno solo.
 
 &nbsp;
 
-Enamórate de su cabello terso,
+Arriva a su cabello terso,
 
-enamórate de su pelo liso,
-
-o sin cabello en absoluto.
+arrivas a su pelo liso.
 
 &nbsp;
 
-Pero tu natural
+Puedes ser mariposa y fiel
 
-encaja mejor que nunca.
-
-&nbsp;
-
-Butterfly Taylor.
-
-&nbsp;
-
-Vista exótica.
-
-&nbsp;
-
-El descaro de la jungla.
+por cada pistilo.
