--- a/markdown-lab/poemas/_ (14).md
+++ b/markdown-lab/poemas/_ (14).md
@@ -1,8 +1,16 @@
 ---
-slug: "/poemas/tus-gemidos-son-acordes"
+slug: "/poemas/no-eres-fea"
 tags: ["love"]
-title: "tus-gemidos-son-acordes"
+title: "no-eres-fea"
 ---
+No eres fea, 
+
+sino fea, 
+
+tu ausencia.
+
+&nbsp;
+
 Tus gemidos son acordes 
 
 que armonizan 
@@ -10,14 +18,6 @@ que armonizan
 en el himno 
 
 de nuestro vaivén.
-
-&nbsp;
-
-No eres fea, 
-
-sino fea, 
-
-tu ausencia.
 
 &nbsp;
 
