--- a/markdown-lab/poemas/_ (16).md
+++ b/markdown-lab/poemas/_ (16).md
@@ -33,9 +33,9 @@ de ni uno solo.
 
 &nbsp;
 
-Arriva a su cabello terso,
+Arriba a su cabello terso,
 
-arrivas a su pelo liso.
+arribas a su pelo liso.
 
 &nbsp;
 
