enhance new poem

--- a/markdown-lab/poemas/_ (18).md
+++ b/markdown-lab/poemas/_ (18).md
@@ -1,9 +1,9 @@
 ---
 slug: "/poemas/amo-los-adornos-de-becquer"
 tags: ["normal"]
-title: "amo-los-adornos-de-becquer"
+title: "amo-los-adornos-de-bécquer"
 ---
-Amo los adornos de Becquer, 
+Amo los adornos de Bécquer, 
 
 amo el romanticismo rebuscado, 
 
@@ -43,8 +43,6 @@ desde de una perspectiva sincera.
 
 &nbsp;
 
-
-&nbsp;
 Esto no es una revuelta, 
 
 es mi advertencia.
