--- a/markdown-lab/poemas/_ (15).md
+++ b/markdown-lab/poemas/_ (15).md
@@ -115,19 +115,19 @@ Sé lo que se siente se separen.
 
 &nbsp;
 
-Sé lo que se sienten convulsiones.
-
-&nbsp;
-
 Sé lo que se sienten los amigos.
 
 &nbsp;
 
-Sé lo que siente soledad.
+Sé lo que se siente soledad.
 
 &nbsp;
 
 Sé lo que siente estar drogado.
+
+&nbsp;
+
+Sé lo que se sienten convulsiones.
 
 &nbsp;
 
