--- a/markdown-lab/poemas/_ (19).md
+++ b/markdown-lab/poemas/_ (19).md
@@ -53,21 +53,21 @@ que tus objetivos terminales
 
 no son importantes, 
 
-puedes querer 
-
 por sobre todas las cosas, 
+
+puedes querer 
 
 lo que jamás nadie 
 
-ha deseado,
+ha deseado.
 
-y también puedes 
+&nbsp;
 
-ser extravagante,
+Puedes ser extravagante,
 
 extraterrestre, loca,
 
-melancólica, neurótica.
+melancólica y neurótica.
 
 &nbsp;
 
